# tui-tetris

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
benches/: game_logic.rs
crates/adapter/: Cargo.toml
crates/adapter/src/: lib.rs  runtime.rs  server.rs
crates/core/: Cargo.toml
crates/core/src/: board.rs  game_state.rs  lib.rs  snapshot.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs  map.rs
crates/term/: Cargo.toml
crates/term/src/: fb.rs  game_view.rs  lib.rs  renderer.rs
crates/tetris-adapter/: Cargo.toml
crates/tetris-adapter-protocol/: Cargo.toml
crates/tetris-adapter-protocol/src/: lib.rs  protocol.rs
crates/tetris-adapter/src/: lib.rs
crates/tetris-adapter/src/adapter/: client_mailbox.rs  command_apply.rs  game_loop.rs  mod.rs  observation.rs  observation_schedule.rs  runtime.rs  server.rs  server_tests.rs  wire_log.rs
crates/tetris-core/: Cargo.toml
crates/tetris-core/src/: lib.rs  types.rs
crates/tetris-core/src/core/: board.rs  game_state.rs  game_state_tests.rs  mod.rs  scoring.rs  snapshot.rs  state_hash.rs
crates/tetris-session/: Cargo.toml
crates/tetris-session/src/: lib.rs
crates/tetris-session/src/engine/: fixed_step.rs  mod.rs  place.rs  replay.rs  session.rs
crates/tetris-terminal/: Cargo.toml
crates/tetris-terminal/src/: lib.rs
crates/tetris-terminal/src/input/: handler.rs  map.rs  mod.rs
crates/tetris-terminal/src/term/: fb.rs  game_view.rs  mod.rs  renderer.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docs/: FINAL-ASSESSMENT.md  IMPROVEMENT-PLAN.md  PERFORMANCE.md  TODO.md  adapter-protocol.md  adapter-protocol.schema.json  adapter-tui-tetris.md  adapter.md  adapter_acceptance.md  adr-runtime-model.md  architecture-review.md  architecture.md  development-workflow.md  feature-matrix.md  product-contract.md  protocol-v3-migration.md  reimplementation-plan.md  roadmap.md  rules-spec.md
examples/: input_test.rs
protocol/adapter/: CHANGELOG.md  README.md  SPEC.md  schema.json
protocol/adapter/conformance/: adapter_verify.py
protocol/adapter/profiles/: tcp-json-lines.md
protocol/adapter/v2.1.1/: CHANGELOG.md  README.md  SPEC.md
scripts/: adapter_verify.py  bench_gate.py
src/: app_cli.rs  lib.rs  main.rs  observe.rs  replay_cli.rs  types.rs
src/adapter/: adapter.rs  client_mailbox.rs  command_apply.rs  game_loop.rs  mod.rs  observation.rs  observation_schedule.rs  protocol.rs  runtime.rs  server.rs  server_config.rs  server_tests.rs  wire_log.rs
src/core/: board.rs  game_state.rs  game_state_tests.rs  mod.rs  pieces.rs  rng.rs  scoring.rs  snapshot.rs
src/engine/: place.rs
src/input/: handler.rs  map.rs  mod.rs
src/term/: fb.rs  game_view.rs  mod.rs  render_throttle.rs  renderer.rs
src/ui/: incremental.rs  input.rs  input_handler.rs  mod.rs  widgets.rs
tests/: adapter_acceptance_test.rs  adapter_closed_loop_test.rs  adapter_controller_disconnect_test.rs  adapter_docs_test.rs  adapter_e2e_test.rs  adapter_observation_no_alloc_gate_test.rs  adapter_port_check_test.rs  adapter_stress_test.rs  app_cli_test.rs  architecture_boundary_test.rs  board_tests.rs  e2e_no_alloc_gate_test.rs  fixed_step_clock_test.rs  input_no_alloc_gate_test.rs  integration_tests.rs  no_alloc_gate_test.rs  pieces_tests.rs  protocol_v3_test.rs  render_test.rs  render_throttle_test.rs  replay_cli_test.rs  replay_runtime_test.rs  schema_gate_test.rs  session_runtime_test.rs  snapshot_board_hash_test.rs  term_game_view_test.rs  term_no_alloc_gate_test.rs  terminal_boundary_test.rs  transition_api_test.rs
tests/support/: mod.rs
