[workspace]
members = [
    ".",
    "crates/tetris-core",
    "crates/tetris-session",
    "crates/tetris-adapter-protocol",
    "crates/tetris-adapter",
    "crates/tetris-terminal",
]
resolver = "2"

[package]
name = "tui-tetris"
version = "0.1.0"
edition = "2021"
authors = ["AI Assistant"]
description = "High-performance TUI Tetris with AI control support"
default-run = "tui-tetris"

[[bin]]
name = "tui-tetris"
path = "src/main.rs"

[[bin]]
name = "input-test"
path = "src/bin/input_test.rs"

[dependencies]
tetris-core = { path = "crates/tetris-core" }
tetris-session = { path = "crates/tetris-session" }
tetris-adapter-protocol = { path = "crates/tetris-adapter-protocol" }
tetris-adapter = { path = "crates/tetris-adapter" }
tetris-terminal = { path = "crates/tetris-terminal" }
crossterm = { version = "0.28", features = ["use-dev-tty"] }

# Async networking for AI adapter
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
arrayvec = "0.7"

[dev-dependencies]
tetris-core = { path = "crates/tetris-core", features = ["test-support"] }
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "game_logic"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
