[workspace]
members = [
    ".",
    "crates/tetris-core",
    "crates/tetris-session",
    "crates/tetris-adapter-protocol",
    "crates/tetris-adapter",
    "crates/tetris-terminal",
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
arrayvec = "0.7"
criterion = { version = "0.5", features = ["html_reports"] }
crossterm = { version = "0.28", features = ["use-dev-tty"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.42"
tetris-adapter = { path = "crates/tetris-adapter" }
tetris-adapter-protocol = { path = "crates/tetris-adapter-protocol" }
tetris-core = { path = "crates/tetris-core" }
tetris-session = { path = "crates/tetris-session" }
tetris-terminal = { path = "crates/tetris-terminal" }

[package]
name = "tui-tetris"
version = "0.1.0"
edition = "2024"
authors = ["AI Assistant"]
description = "High-performance TUI Tetris with AI control support"
default-run = "tui-tetris"

[[bin]]
name = "tui-tetris"
path = "src/main.rs"

[[example]]
name = "input-test"
path = "examples/input_test.rs"

[dependencies]
tetris-core.workspace = true
tetris-session.workspace = true
tetris-adapter-protocol.workspace = true
tetris-adapter.workspace = true
tetris-terminal.workspace = true
crossterm.workspace = true
serde_json.workspace = true
anyhow.workspace = true
arrayvec.workspace = true

[dev-dependencies]
tetris-core = { path = "crates/tetris-core", features = ["test-support"] }
serde.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
criterion.workspace = true

[[bench]]
name = "game_logic"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
