[package]
name = "tui-tetris-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
arrayvec = "0.7"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui-tetris-core = { path = "../core" }
tui-tetris-types = { path = "../types" }

