[package]
name = "tetris-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
arrayvec = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tetris-core = { path = "../tetris-core" }
tetris-session = { path = "../tetris-session" }
tetris-adapter-protocol = { path = "../tetris-adapter-protocol" }

[dev-dependencies]
tetris-core = { path = "../tetris-core", features = ["test-support"] }
