[package]
name = "tetris-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
arrayvec.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tetris-core.workspace = true
tetris-session.workspace = true
tetris-adapter-protocol.workspace = true

[dev-dependencies]
tetris-core = { path = "../tetris-core", features = ["test-support"] }
